--- a/css/index.css
+++ b/css/index.css
@@ -277,7 +277,7 @@ a{
 	height: auto;
 	position: absolute;
 	bottom: 0;
-	right: -10px;
+	right: 0px;
 	z-index: 41;
 }
 .youshiImgm{
@@ -363,7 +363,10 @@ a{
 	line-height:30px;
 	z-index: 999;
 	background-color: #FFFFFF;
-	padding-left: 15px;
+	
+	width: 95%;
+	margin: 0 auto;
+	
 	margin-top: -4px;
 }
 
